fixed white space

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -158,7 +158,7 @@ body {
   text-align: center;
   background: url('/images/computer_header.jpg') no-repeat fixed;
   background-position-x: right;
-  background-position-y: 60px;
+  background-position-y: top;
   background-size: 100%;
   color: white;
 
